# remanence

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSING.md  Makefile  README.md  SECURITY.md  plan.txt
crates/rao-recover/: Cargo.toml
crates/rao-recover/src/: main.rs
crates/remanence-aead/: Cargo.toml
crates/remanence-aead/src/: error.rs  header.rs  inspect.rs  kdf.rs  key_frame.rs  lib.rs  metadata.rs  open.rs  range.rs  seal.rs  stream.rs  wrap.rs  xwing.rs
crates/remanence-aead/testdata/: deterministic-seal.hex  xwing-draft10-kat.txt  xwing-wrap-kat.txt
crates/remanence-api/: Cargo.toml  build.rs
crates/remanence-api/src/: append_ring.rs  diagnostics.rs  io_memory.rs  lib.rs  library.rs  mount.rs  operations.rs  pool_selection.rs  pool_write.rs  read_core.rs  tape_init.rs  write_owner.rs
crates/remanence-bru/: Cargo.toml
crates/remanence-bru/src/: lib.rs
crates/remanence-chaos/: Cargo.toml
crates/remanence-chaos/src/: lib.rs  model.rs
crates/remanence-cli/: Cargo.toml
crates/remanence-cli/src/: archive_ingest.rs  archive_map.rs  lib.rs  main.rs  pool_ops.rs  rao_recover.rs  rem_debug.rs  top.rs
crates/remanence-cli/tests/: extract_stream_memory.rs  quadstor_cross_drive.rs
crates/remanence-crc/: Cargo.toml
crates/remanence-crc/src/: lib.rs
crates/remanence-daemon/: Cargo.toml
crates/remanence-daemon/src/: lib.rs  main.rs  tls.rs
crates/remanence-daemon/tests/: serve_catalog.rs
crates/remanence-format/: Cargo.toml
crates/remanence-format-driver/: Cargo.toml
crates/remanence-format-driver/src/: lib.rs
crates/remanence-format-driver/tests/: foreign_dependency_guard.rs
crates/remanence-format/src/: driver.rs  envelope.rs  error.rs  layout.rs  lib.rs  manifest.rs  model.rs  pax.rs  pfr.rs  reader.rs  tar.rs  writer.rs
crates/remanence-format/tests/: layer3c_integration.rs  rao_negative_vectors.rs  rao_vectors.rs
crates/remanence-library/: Cargo.toml
crates/remanence-library/src/: block_io.rs  discovery.rs  error.rs  lib.rs  model.rs  ops.rs  physical_io.rs  sysfs.rs  transport.rs
crates/remanence-library/src/handle/: mod.rs  tests.rs
crates/remanence-library/src/watch/: coalesce.rs  error.rs  event.rs  linux.rs  mock.rs  mod.rs  source.rs
crates/remanence-library/tests/: platform_dependency_guard.rs  quadstor_smoke.rs  watch_live_udev.rs
crates/remanence-parity/: Cargo.toml
crates/remanence-parity/examples/: generate_publication_vectors.rs
crates/remanence-parity/src/: bootstrap.rs  capacity.rs  codec.rs  durable.rs  error.rs  filemark_map.rs  journal.rs  lib.rs  mapping.rs  model.rs  parity_map.rs  raw.rs  recovery.rs  resume.rs  scan.rs  sidecar.rs  sink.rs  source.rs
crates/remanence-parity/src/sink/: tests.rs
crates/remanence-parity/tests/: quadstor_parity.rs  scan_round_trip.rs
crates/remanence-scsi/: Cargo.toml
crates/remanence-scsi/examples/: inquiry.rs  topology.rs
crates/remanence-scsi/src/: error.rs  initialize_element_status.rs  inquiry.rs  lib.rs  load_unload.rs  locate.rs  log_sense.rs  mode.rs  move_medium.rs  prevent_allow.rs  read_block_limits.rs  read_element_status.rs  read_position.rs  read_write.rs  rewind.rs  sense.rs  sg_io.rs  space.rs  vpd.rs  write_filemarks.rs
crates/remanence-state/: Cargo.toml  build.rs
crates/remanence-state/src/: adapters.rs  audit.rs  checkpoint.rs  config.rs  error.rs  index.rs  lib.rs  lock.rs  paths.rs  state.rs
crates/remanence-state/tests/: no_hosted_database.rs
crates/remanence-stream/: Cargo.toml
crates/remanence-stream/src/: lib.rs  recovery.rs
fieldtest/tools/remfield-io/: Cargo.toml
fieldtest/tools/remfield-io/src/: main.rs
fuzz/: Cargo.toml
fuzz/corpus/rao_envelope_header/: valid-envelope-header
fuzz/corpus/rao_key_frame/: duplicate-slot-index  trailing-byte  truncated-2-slot  valid-1-slot  valid-2-slot  valid-8-slot
fuzz/corpus/rao_whole_object_open_verify/: valid-v2-recipient-object
fuzz/examples/: generate_envelope_corpus.rs  generate_v2_corpus.rs
fuzz/fuzz_targets/: rao_envelope_header.dict  rao_envelope_header.rs  rao_envelope_metadata_cbor.dict  rao_envelope_metadata_cbor.rs  rao_key_frame.rs  rao_manifest_cbor.dict  rao_manifest_cbor.rs  rao_plaintext_tar_loop.dict  rao_plaintext_tar_loop.rs  rao_whole_object_open_verify.dict  rao_whole_object_open_verify.rs
verif/aead-framing/: Cargo.toml  SPEC.md
verif/aead-framing/lean/: AeadFraming.lean  lake-manifest.json  lakefile.toml
verif/aead-framing/lean/AeadFraming/: Funs.lean  Spec.lean  Types.lean
verif/aead-framing/src/: lib.rs
verif/crc64-xz/: Cargo.toml  SPEC.md
verif/crc64-xz/lean/: Crc64Xz.lean  lake-manifest.json  lakefile.toml
verif/crc64-xz/lean/Crc64Xz/: Funs.lean  Spec.lean  Types.lean
verif/crc64-xz/src/: lib.rs
verif/parity-mapping/: Cargo.toml  SPEC.md
verif/parity-mapping/lean/: ParityMapping.lean  lake-manifest.json  lakefile.toml
verif/parity-mapping/lean/ParityMapping/: Funs.lean  Spec.lean
verif/parity-mapping/src/: lib.rs
verif/parity-sidecar-layout/: Cargo.toml  SPEC.md  parity_sidecar_layout_verif.llbc
verif/parity-sidecar-layout/lean/: ParitySidecarLayout.lean  lake-manifest.json  lakefile.toml
verif/parity-sidecar-layout/lean/ParitySidecarLayout/: Funs.lean  Spec.lean
verif/parity-sidecar-layout/src/: lib.rs
verif/parity-state/: Cargo.toml  SPEC.md
verif/parity-state/lean/: ParityState.lean  lake-manifest.json  lakefile.toml
verif/parity-state/src/: lib.rs
verif/rao-header/: Cargo.toml  SPEC.md
verif/rao-header/lean/: RaoHeader.lean  lake-manifest.json  lakefile.toml
verif/rao-header/src/: lib.rs
verif/rao-manifest/: Cargo.toml  SPEC.md
verif/rao-manifest/lean/: RaoManifest.lean  lake-manifest.json  lakefile.toml
verif/rao-manifest/src/: lib.rs
verif/rao-metadata/: Cargo.toml  SPEC.md
verif/rao-metadata/lean/: RaoMetadata.lean  lake-manifest.json  lakefile.toml
verif/rao-metadata/src/: lib.rs
verif/tape-init/: Cargo.toml  SPEC.md
verif/tape-init/lean/: TapeInit.lean  lake-manifest.json  lakefile.toml
verif/tape-init/src/: lib.rs
(+646 files in other folders)
