[package]
name        = "remanence-aead"
description = "RAO 1.0 AEAD envelope: header, HKDF, metadata, STREAM payload, and keyless inspection."
version     .workspace = true
edition     .workspace = true
rust-version.workspace = true
authors     .workspace = true
license     .workspace = true
repository  .workspace = true

[dependencies]
chacha20poly1305 = { workspace = true }
hkdf             = { workspace = true }
hpke             = { workspace = true }
getrandom        = { workspace = true }
rand_core        = { workspace = true }
sha2             = { workspace = true }
thiserror        = { workspace = true }
zeroize          = { workspace = true }

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"
