[package]
name        = "remanence-aead"
description = "RAO 1.0 AEAD envelope: header, HKDF, metadata, STREAM payload, and keyless inspection."
version     .workspace = true
edition     .workspace = true
rust-version.workspace = true
authors     .workspace = true
license = "Apache-2.0"
repository  .workspace = true

[dependencies]
chacha20poly1305 = { workspace = true }
chacha20         = { workspace = true }
hkdf             = { workspace = true }
hpke             = { workspace = true }
getrandom        = { workspace = true }
rand_core        = { workspace = true }
libcrux-ml-kem   = { version = "=0.0.10", default-features = false, features = ["mlkem768"] }
sha2             = { workspace = true }
sha3             = "=0.10.8"
thiserror        = { workspace = true }
x25519-dalek     = { version = "=2.0.1", features = ["static_secrets"] }
zeroize          = { workspace = true }

[dev-dependencies]
libcrux-kem = { version = "=0.0.9", default-features = false }

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"
