[package]
name        = "remanence-bru"
description = "Read-only BRU/BRU-PE legacy format driver for Remanence."
version     .workspace = true
edition     .workspace = true
rust-version.workspace = true
authors     .workspace = true
license = "Apache-2.0"
repository  .workspace = true

[dependencies]
remanence-format-driver = { path = "../remanence-format-driver" }
remanence-library = { path = "../remanence-library" }

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"
