[package]
name        = "remanence-chaos"
description = "Phase B QuadStor chaos adapter transport for Remanence."
version     .workspace = true
edition     .workspace = true
rust-version.workspace = true
authors     .workspace = true
license     .workspace = true
repository  .workspace = true
readme      .workspace = true

[dependencies]
remanence-library = { path = "../remanence-library" }
remanence-scsi    = { path = "../remanence-scsi" }

rusqlite  = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
sha2      = { workspace = true }
thiserror = { workspace = true }
time      = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"
