[package]
name        = "remanence-cli"
description = "rem — the operator-facing CLI for Remanence (discovery, inspection)."
version     .workspace = true
edition     .workspace = true
rust-version.workspace = true
authors     .workspace = true
license     .workspace = true
repository  .workspace = true

[[bin]]
name = "rem"
path = "src/main.rs"

[[bin]]
name = "rem-debug"
path = "src/rem_debug.rs"

[dependencies]
remanence-bru     = { path = "../remanence-bru", optional = true }
remanence-aead    = { path = "../remanence-aead" }
remanence-chaos   = { path = "../remanence-chaos" }
remanence-format  = { path = "../remanence-format" }
remanence-library = { path = "../remanence-library" }
remanence-state   = { path = "../remanence-state" }
remanence-stream  = { path = "../remanence-stream" }
remanence-api     = { path = "../remanence-api" }
crossterm         = { version = "0.28", optional = true }
ciborium          = { workspace = true }
clap              = { workspace = true }
prost-types       = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
sha2              = { workspace = true }
tempfile          = { workspace = true }
time              = { workspace = true }
tokio             = { workspace = true }
tonic             = { workspace = true }
uuid              = { workspace = true }
xattr             = { workspace = true }
zeroize           = { workspace = true }
ratatui           = { version = "0.29", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }

[features]
default = ["tui"]
foreign-bru = ["dep:remanence-bru", "remanence-api/foreign-bru"]
tui = ["dep:ratatui", "dep:crossterm"]

# Enables the `rem watch` subcommand by pulling in the
# `linux-udev` backend from `remanence-library` and a tokio runtime.
# Linux-only at build time; requires `pkg-config` + `libudev-dev`
# system packages.
linux-udev = ["remanence-library/linux-udev"]

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
