[package]
name        = "remanence-state"
description = "Layer 4 — local daemon state, audit log, and rebuildable indexes for Remanence."
version     .workspace = true
edition     .workspace = true
rust-version.workspace = true
authors     .workspace = true
license     .workspace = true
repository  .workspace = true

[dependencies]
remanence-library = { path = "../remanence-library" }
remanence-parity = { path = "../remanence-parity" }
remanence-crc    = { path = "../remanence-crc" }

ciborium  = { workspace = true }
nix       = { workspace = true }
rusqlite  = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
sha2      = { workspace = true }
thiserror = { workspace = true }
time      = { workspace = true }
toml      = { workspace = true }
uuid      = { workspace = true, features = ["v5"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"
